# pymonke

./: .gitignore  HowToUpload.txt  README.md  aufgabe1_tabellen.tex  module_tests.py  setup.cfg  typing_test.py
monke/: INSTALLATION_GUIDE.txt  __init__.py  constants.py  functions.py  latex.backup  latex.py  latextable.py  plots.py  readme.py  textable.py
monke/latex/: __init__.py  tex_graphic.py  tex_table.py  tex_tabular.py  texfile.py  textable.py  utils.py
monke/latex/tests/: table_test.py
monke/mmath/: __init__.py  error_style.py  num_with_error.py  rounding.py  statistics.py
monke/mmath/tests/: error_round_test.py  num_with_error_test.py  rounding_test.py
monke2.egg-info/: PKG-INFO
src/pymonke/: __init__.py  constants.py  pymonke_json_decoder.py
src/pymonke/fit/: __init__.py  fit.py  fit_result.py  parse.py
src/pymonke/gui/: __init__.py  app.py  browse_frame.py  dict_frame.py  entry_label_frame.py  formula_frame.py  info_label.py  labeled_entry.py  list_frame.py  main.py  misc.py  parameter_frame.py  parameters_scrollable_frame.py
src/pymonke/gui/data_init/: browse_save_frame.py  data_init_frame.py  status_frame.py
src/pymonke/gui/fitting/: add_args_frame.py  fit_frame.py  fit_option_menu.py
src/pymonke/gui/formula/: formula_frame.py  (+2 more)
src/pymonke/latex/: __init__.py  tex_table.py  tex_tabular.py  tex_tabular.pyi  utils.py  utils.pyi
src/pymonke/misc/: dataframe.py  file_management.py
src/pymonke/mmath/: __init__.py  num_with_error.py  rounding.py  statistics.py
test/: Cu.csv  Cu.txt  main.py
tests/: input_test.py  main.py
(+9 files in other folders)
