[metadata]
name = pymonke
version = 0.0.3
author = Gabriel Remiszewski
description = Tools for creating lab reports and data analysis
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    numpy>=1.26
    pandas>=2.2

