[metadata]
name = pymonke
version = 0.0.4
author = Gabriel Remiszewski
description = Tools for creating lab reports and data analysis
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/GabrielRemi/pymonke

[options]
python_requires = >=3.10
install_requires =
    numpy>=1.26
    pandas>=2.2

